k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drone-scheduler-service-ingress-controller
  namespace: smart-city-traffic
  annotations:
    kubernetes.io/ingress.class: kong
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /drone(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: drone-scheduler-service
                port:
                  number: 5001
